# vb_sast_tool

./: ACTION_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: EXAMPLES.md  codeql.yml  vb-security-scan.yml
examples/findings/: vb_findings.sarif.json
examples/vb_exports/: form_login.frm  module1.bas
examples/vb_exports/access_db/: README_Access_People_Demo.txt  basPeople.bas  create_people_table.sql  frmPeopleManager_code.txt
rules/: rules.yaml
src/: sarif_generator.py  scan_vb_vulnerabilities.py
src/vb_sast_tool/: __init__.py  scan_vb_vulnerabilities.py
tests/: __init__.py  test_rules.py
