[tool.poetry]
name = "vb-sast-tool"
version = "0.1.0"
description = "Python tool for scanning Visual Basic code for security vulnerabilities"
authors = ["rpigu-i"]
readme = "README.md"
packages = [{include = "vb_sast_tool", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"

[tool.poetry.scripts]
vb-scan = "vb_sast_tool.scan_vb_vulnerabilities:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (<8)"
]
